Fixed GetAuth, cleaned code